# Computer-Graphics-Project

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: clang-format.yml  cmake-multi-platform.yml
assets/models/cart/: cart.gltf  license.txt
assets/shaders/: default.frag  default.vert  raw_vert.frag  raw_vert.vert
logging/: mathijs.md  taru.md
scripts/: build.sh  build_run.sh  format.sh
src/: main.cpp
src/app/: app.hpp  pipeline.hpp  players.hpp  system.hpp
src/app/objects/: curves.hpp  island.hpp
src/asset/: asset.hpp  asset_paths.hpp  material.hpp  model.cpp  model.hpp  render_object_spawner.cpp  render_object_spawner.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp
src/graphics/: camera.hpp  geometry.hpp  rendering.hpp  window.hpp
src/log/: log.cpp  log.hpp
src/world/: events.hpp  registry.hpp
tests/: template_test.cpp
